postgresql-9.1 (9.1.1-2) UNRELEASED; urgency=low

  [ Peter Eisentraut ]
  * Fix FTBFS twice with dpkg-dev >= 1.16.1, because of leftover file
    src/backend/gettext-files.  Clean that one explicitly. (Closes: #643645)
  * Fix lintian reports: (Closes: #643646)
    - brace-expansion-in-debhelper-config-file
    - maintainer-script-without-set-e

 -- Martin Pitt <mpitt@debian.org>  Fri, 30 Sep 2011 22:21:08 +0200

postgresql-9.1 (9.1.1-1) unstable; urgency=low

  * New upstream bug fix release:
    - Make pg_options_to_table return NULL for an option with no value.
      Previously such cases would result in a server crash.
    - Fix memory leak at end of a GiST index scan.
      Commands that perform many separate GiST index scans, such as
      verification of a new GiST-based exclusion constraint on a table
      already containing many rows, could transiently require large
      amounts of memory due to this leak.
    - Fix explicit reference to pg_temp schema in "CREATE TEMPORARY
      TABLE". This used to be allowed, but failed in 9.1.0.

 -- Martin Pitt <mpitt@debian.org>  Mon, 26 Sep 2011 14:35:36 +0200

postgresql-9.1 (9.1.0-1) unstable; urgency=low

  * Final 9.1 release.
  * 02-relax-sslkey-permscheck.patch, 50-per-version-dirs.patch: Refresh to
    apply cleanly.
  * debian/control: Tighten the dependencies of the -pl* extensions/-contrib
    to postgresql-9.1 to the same binary version. (Closes: #640335)

 -- Martin Pitt <mpitt@debian.org>  Mon, 12 Sep 2011 16:02:28 +0200

postgresql-9.1 (9.1~rc1-3) unstable; urgency=low

  * debian/watch: Fix for mangling ~rc, thanks Peter Eisentraut. 
    (Closes: #639357)
  * debian/control: Add versionless Provides: to the PL* extensions, as per
    request from Christoph Berg.
  * debian/control: Add "Replaces: postgresql-9.0-dbg" to fix file conflict.
    (Closes: #639258)
  * debian/control: Drop the versionless metapackages, they are built from