@@ -11,4 +11,4 @@ usr/lib/libpgtypes.so
 usr/lib/libecpg.a
 usr/lib/libecpg_compat.a
 usr/lib/libpgtypes.a
-usr/share/postgresql/9.1/man/man1/ecpg.1 /usr/share/man/man1
+usr/share/postgresql/9.1/man/man1/ecpg.1.gz /usr/share/man/man1
