@@ -22,13 +22,13 @@ usr/share/locale/*/LC_MESSAGES/pg_resetxlog-9.1.mo
 usr/share/locale/*/LC_MESSAGES/postgres-9.1.mo
 usr/share/locale/*/LC_MESSAGES/plpgsql-9.1.mo
 usr/share/postgresql/9.1/extension/plpgsql*
-usr/share/postgresql/9.1/man/man1/initdb.1
-usr/share/postgresql/9.1/man/man1/pg_basebackup.1
-usr/share/postgresql/9.1/man/man1/pg_controldata.1
-usr/share/postgresql/9.1/man/man1/pg_ctl.1
-usr/share/postgresql/9.1/man/man1/pg_resetxlog.1
-usr/share/postgresql/9.1/man/man1/postgres.1
-usr/share/postgresql/9.1/man/man1/postmaster.1
+usr/share/postgresql/9.1/man/man1/initdb.1.gz
+usr/share/postgresql/9.1/man/man1/pg_basebackup.1.gz
+usr/share/postgresql/9.1/man/man1/pg_controldata.1.gz
+usr/share/postgresql/9.1/man/man1/pg_ctl.1.gz
+usr/share/postgresql/9.1/man/man1/pg_resetxlog.1.gz
+usr/share/postgresql/9.1/man/man1/postgres.1.gz
+usr/share/postgresql/9.1/man/man1/postmaster.1.gz
 usr/share/postgresql/9.1/timezonesets/*
 usr/share/postgresql/9.1/tsearch_data
 usr/share/postgresql/9.1/*.sql
