@@ -11,20 +11,20 @@ usr/lib/postgresql/9.1/bin/reindexdb
 usr/lib/postgresql/9.1/bin/pg_restore
 usr/lib/postgresql/9.1/bin/psql
 usr/lib/postgresql/9.1/bin/vacuumdb
-usr/share/postgresql/9.1/man/man1/pg_restore.1
-usr/share/postgresql/9.1/man/man1/psql.1
-usr/share/postgresql/9.1/man/man1/vacuumdb.1
-usr/share/postgresql/9.1/man/man1/clusterdb.1
-usr/share/postgresql/9.1/man/man1/pg_dump.1
-usr/share/postgresql/9.1/man/man1/pg_dumpall.1
-usr/share/postgresql/9.1/man/man1/createdb.1
-usr/share/postgresql/9.1/man/man1/createlang.1
-usr/share/postgresql/9.1/man/man1/createuser.1
-usr/share/postgresql/9.1/man/man1/dropdb.1
-usr/share/postgresql/9.1/man/man1/droplang.1
-usr/share/postgresql/9.1/man/man1/dropuser.1
-usr/share/postgresql/9.1/man/man1/reindexdb.1
-usr/share/postgresql/9.1/man/man7/*7
+usr/share/postgresql/9.1/man/man1/pg_restore.1.gz
+usr/share/postgresql/9.1/man/man1/psql.1.gz
+usr/share/postgresql/9.1/man/man1/vacuumdb.1.gz
+usr/share/postgresql/9.1/man/man1/clusterdb.1.gz
+usr/share/postgresql/9.1/man/man1/pg_dump.1.gz
+usr/share/postgresql/9.1/man/man1/pg_dumpall.1.gz
+usr/share/postgresql/9.1/man/man1/createdb.1.gz
+usr/share/postgresql/9.1/man/man1/createlang.1.gz
+usr/share/postgresql/9.1/man/man1/createuser.1.gz
+usr/share/postgresql/9.1/man/man1/dropdb.1.gz
+usr/share/postgresql/9.1/man/man1/droplang.1.gz
+usr/share/postgresql/9.1/man/man1/dropuser.1.gz
+usr/share/postgresql/9.1/man/man1/reindexdb.1.gz
+usr/share/postgresql/9.1/man/man7/
 usr/share/postgresql/9.1/psqlrc.sample
 usr/share/locale/*/LC_MESSAGES/pg_dump-9.1.mo
 usr/share/locale/*/LC_MESSAGES/psql-9.1.mo
